crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_wildcard_returns_captured_function.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype Choice = Stop | Zero | One Int | Two Int Int\nchoose : int -> Choice -> (int -> int)\nchoose outer subject =\n    case trace \"subject\" subject of\n        Stop -> trace \"explicit\" (\\n -> n)\n        _ -> trace \"fallback\" (\\n -> addInteger outer n)\nmain = (choose 10 Stop 5, choose 10 Zero 5, choose 10 (One 2) 5, choose 10 (Two 3 4) 5)\n"
---
--- unoptimized Core
let message#28 : string = "subject" in
let message#29 : string = "fallback" in
let message#30 : string = "explicit" in
let fromString#10 : string -> string = \value#26 : string -> value#26 in
let choose#2 : int -> Main.Choice -> int -> int = \outer#8 : int subject#9 : Main.Choice -> let match#13 : Main.Choice = trace (fromString#10 message#28) in subject#9 in
let leaf#19 : @delay (int -> int) = delay (trace (fromString#10 message#29) in \n#12 : int -> addInteger outer#8 n#12) in
let projection#27 : pair int (list Data) = unConstrData match#13 in
case@Pair projection#27 of
  Pair tag#23 fields#24 -> case@Tag tag#23 of
    0 -> trace (fromString#10 message#30) in \n#11 : int -> n#11
    1 -> force leaf#19
    2 -> force leaf#19
    3 -> force leaf#19 in
let fromInt#3 : int -> int = \value#25 : int -> value#25 in
let fromInt#5 : int -> Int = iData in
let main#1 : (int, int, int, int) = constr 0 (choose#2 (fromInt#3 10) (constrData 0 (con (list data) [])) (fromInt#3 5)) (choose#2 (fromInt#3 10) (constrData 1 (con (list data) [])) (fromInt#3 5)) (choose#2 (fromInt#3 10) ((\field#4 : Int -> constrData 2 (mkCons field#4 (con (list data) []))) (fromInt#5 2)) (fromInt#3 5)) (choose#2 (fromInt#3 10) ((\field#6 : Int field#7 : Int -> constrData 3 (mkCons field#6 (mkCons field#7 (con (list data) [])))) (fromInt#5 3) (fromInt#5 4)) (fromInt#3 5)) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_28
    [(lam message_29
      [(lam message_30
        [(lam fromString_10
          [(lam choose_2
            [(lam fromInt_3
              [(lam fromInt_5
                [(lam main_1 main_1)
                  (constr 0
                    [[[choose_2 [fromInt_3 (con integer 10)]]
                      [[(builtin constrData) (con integer 0)] (con (list data) [])]]
                      [fromInt_3 (con integer 5)]]
                    [[[choose_2 [fromInt_3 (con integer 10)]]
                      [[(builtin constrData) (con integer 1)] (con (list data) [])]]
                      [fromInt_3 (con integer 5)]]
                    [[[choose_2 [fromInt_3 (con integer 10)]]
                      [(lam field_4
                        [[(builtin constrData) (con integer 2)]
                          [[(force (builtin mkCons)) field_4] (con (list data) [])]])
                        [fromInt_5 (con integer 2)]]]
                      [fromInt_3 (con integer 5)]]
                    [[[choose_2 [fromInt_3 (con integer 10)]]
                      [[(lam field_6
                        (lam field_7
                          [[(builtin constrData) (con integer 3)]
                            [[(force (builtin mkCons)) field_6]
                              [[(force (builtin mkCons)) field_7] (con (list data) [])]]]))
                        [fromInt_5 (con integer 3)]]
                        [fromInt_5 (con integer 4)]]]
                      [fromInt_3 (con integer 5)]])])
                (builtin iData)])
              (lam value_25 value_25)])
            (lam outer_8
              (lam subject_9
                [(lam match_13
                  [(lam leaf_19
                    [(lam projection_27
                      (case
                        projection_27
                        (lam tag_23
                          (lam fields_24
                            (case
                              tag_23
                              (force
                                [[(force (builtin trace)) [fromString_10 message_30]] (delay (lam n_11 n_11))])
                              (force leaf_19)
                              (force leaf_19)
                              (force leaf_19))))))
                      [(builtin unConstrData) match_13]])
                    (delay
                      (force
                        [[(force (builtin trace)) [fromString_10 message_29]]
                          (delay (lam n_12 [[(builtin addInteger) outer_8] n_12]))]))])
                  (force [[(force (builtin trace)) [fromString_10 message_28]] (delay subject_9)])]))])
          (lam value_26 value_26)])
        (con string "explicit")])
      (con string "fallback")])
    (con string "subject")])
--- optimized Core
let choose#37 : int -> Main.Choice -> int -> int = \outer#20 : int subject#21 : Main.Choice -> let match#22 : Main.Choice = trace "subject" in subject#21 in
let leaf#32 : @delay (int -> int) = delay (trace "fallback" in \n#31 : int -> addInteger outer#20 n#31) in
let projection#33 : pair int (list Data) = unConstrData match#22 in
case@Pair projection#33 of
  Pair tag#34 fields#35 -> case@Tag tag#34 of
    0 -> trace "explicit" in \n#36 : int -> n#36
    1 -> force leaf#32
    2 -> force leaf#32
    3 -> force leaf#32 in
let fromInt#40 : int -> Int = iData in
let anf#49 : Main.Choice -> int -> int = choose#37 10 in
let anf#51 : int -> int = anf#49 (con data (Constr 0 [])) in
let anf#53 : int = anf#51 5 in
let anf#55 : Main.Choice -> int -> int = choose#37 10 in
let anf#57 : int -> int = anf#55 (con data (Constr 1 [])) in
let anf#59 : int = anf#57 5 in
let anf#61 : Main.Choice -> int -> int = choose#37 10 in
let anf#63 : Int = fromInt#40 2 in
let anf#62 : list Data = mkCons anf#63 (con (list data) []) in
let anf#64 : Main.Choice = constrData 2 anf#62 in
let anf#65 : int -> int = anf#61 anf#64 in
let anf#67 : int = anf#65 5 in
let anf#69 : Main.Choice -> int -> int = choose#37 10 in
let anf#72 : Int = fromInt#40 3 in
let anf#74 : Int = fromInt#40 4 in
let anf#70 : list Data = mkCons anf#74 (con (list data) []) in
let anf#71 : list Data = mkCons anf#72 anf#70 in
let anf#75 : Main.Choice = constrData 3 anf#71 in
let anf#76 : int -> int = anf#69 anf#75 in
let anf#78 : int = anf#76 5 in
constr 0 anf#53 anf#59 anf#67 anf#78
--- optimized UPLC
(program 1.1.0
  [(lam builtin_43
    [(lam builtin_44
      [(lam choose_10
        [(lam fromInt_11
          [(lam anf_12
            [(lam anf_13
              [(lam anf_14
                [(lam anf_15
                  [(lam anf_16
                    [(lam anf_17
                      [(lam anf_18
                        [(lam anf_19
                          [(lam anf_23
                            [(lam anf_24
                              [(lam anf_25
                                [(lam anf_26
                                  [(lam anf_27
                                    [(lam anf_28
                                      [(lam anf_29
                                        [(lam anf_30
                                          [(lam anf_38
                                            [(lam anf_39
                                              [(lam anf_41
                                                [(lam anf_42 (constr 0 anf_14 anf_17 anf_26 anf_42)) [anf_41 (con integer 5)]])
                                                [anf_27 anf_39]])
                                              [[(builtin constrData) (con integer 3)] anf_38]])
                                            [[builtin_43 anf_28] anf_30]])
                                          [[builtin_43 anf_29] (con (list data) [])]])
                                        [fromInt_11 (con integer 4)]])
                                      [fromInt_11 (con integer 3)]])
                                    [choose_10 (con integer 10)]])
                                  [anf_25 (con integer 5)]])
                                [anf_18 anf_24]])
                              [[(builtin constrData) (con integer 2)] anf_23]])
                            [[builtin_43 anf_19] (con (list data) [])]])
                          [fromInt_11 (con integer 2)]])
                        [choose_10 (con integer 10)]])
                      [anf_16 (con integer 5)]])
                    [anf_15 (con data (Constr 1 []))]])
                  [choose_10 (con integer 10)]])
                [anf_13 (con integer 5)]])
              [anf_12 (con data (Constr 0 []))]])
            [choose_10 (con integer 10)]])
          (builtin iData)])
        (lam outer_1
          (lam subject_2
            [(lam match_3
              [(lam leaf_5
                [(lam projection_6
                  (case
                    projection_6
                    (lam tag_7
                      (lam fields_8
                        (case
                          tag_7
                          (force [[builtin_44 (con string "explicit")] (delay (lam n_9 n_9))])
                          (force leaf_5)
                          (force leaf_5)
                          (force leaf_5))))))
                  [(builtin unConstrData) match_3]])
                (delay
                  (force
                    [[builtin_44 (con string "fallback")]
                      (delay (lam n_4 [[(builtin addInteger) outer_1] n_4]))]))])
              (force [[builtin_44 (con string "subject")] (delay subject_2)])]))])
      (force (builtin trace))])
    (force (builtin mkCons))])
--- result
(constr 0 (con integer 5) (con integer 15) (con integer 15) (con integer 15))
--- logs
["subject", "explicit", "subject", "fallback", "subject", "fallback", "subject", "fallback"]
--- budget
cpu: 6045647, memory: 30910
