crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__closed_local_comptime_includes_its_reachable_helper.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nmain =\n    let\n        helper x = x\n    in\n    comptime (helper ())\n"
---
--- core
let helper#2 : 'erased -> 'erased = \x#3 : 'erased -> x#3 in
let main#1 : unit = () in
main#1
--- uplc
(program 1.1.0
  [(lam helper_2 [(lam main_1 main_1) (con unit ())]) (lam x_3 x_3)])
--- result
(con unit ())
--- logs
[]
--- budget
cpu: 112100, memory: 800
